src/objects/DSCORGPKG__DiscoverOrg_Operation__c.object
<CustomObject>
    <fields>
        <fullName>DSCORGPKG__AccountIdInline__c</fullName>
        <label>AccountIdInline</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__AccountIdsUnchange__c</fullName>
        <label>AccountIdsUnchange</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Account_Added_DO_ID__c</fullName>
        <label>Account Added DO ID</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Account_Added__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Account Added</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Account_Contact__c</fullName>
        <label>Multiple Account&apos;s Contact</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Account_Unchanged_DO_ID__c</fullName>
        <label>Account Unchanged DO ID</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Account_Unchanged__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Account Unchanged</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Account_Updated_DO_ID__c</fullName>
        <label>Account Updated DO ID</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Account_Updated__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Account Updated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Account_s_Contact_DOIds__c</fullName>
        <label>Account&apos;s Contact DOIds</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Contact_Account_Duplicat__c</fullName>
        <label>Contact Account Duplicat</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Contact_Added_DO_ID__c</fullName>
        <label>Contact Added DO ID</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Contact_Unchanged_DO_ID__c</fullName>
        <label>Contact Unchanged DO ID</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Contact_Unchanged__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Contact Unchanged</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Contact_Updated_DO_ID__c</fullName>
        <label>Contact Updated DO ID</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Contacts_Added__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Contacts Added</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Contacts_Updated__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Contacts Updated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Duplicates_DO_ID_Account__c</fullName>
        <label>Duplicates DO ID Account</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Duplicates_DO_ID_Lead__c</fullName>
        <label>Duplicates DO ID Lead</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Duplicates_DO_ID__c</fullName>
        <label>Duplicates DO ID Contact</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Operation_Type__c</fullName>
        <label>Operation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AddUpdateSelectedAccountsContacts</fullName>
                </value>
                <value>
                    <fullName>AddUpdateSelectedAccounts</fullName>
                </value>
                <value>
                    <fullName>AddUpdateSelectedContacts</fullName>
                </value>
                <value>
                    <fullName>AddUpdateSelectedLeads</fullName>
                </value>
                <value>
                    <fullName>AddUpdateAllAccounts</fullName>
                </value>
                <value>
                    <fullName>AddUpdateAllContacts</fullName>
                </value>
                <value>
                    <fullName>AddUpdateAllLeads</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Pages_Completed__c</fullName>
        <defaultValue>-1</defaultValue>
        <label>Pages Completed</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Search_For__c</fullName>
        <label>Search For</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Company</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Search_Query__c</fullName>
        <label>Search Query</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Selected_Campaign__c</fullName>
        <label>Selected Campaign</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Selected_Trigger_IDs__c</fullName>
        <label>Selected Trigger IDs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Total_Batches_Completed__c</fullName>
        <formula>IF( MOD( DSCORGPKG__Total_Records__c ,30) = 0, DSCORGPKG__Pages_Completed__c,DSCORGPKG__Pages_Completed__c+1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Batches Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Total_Batches__c</fullName>
        <formula>CEILING( DSCORGPKG__Total_Records__c/30 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Batches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Total_Records__c</fullName>
        <label>Total Records</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DiscoverOrg_Operations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__customFieldAccount__c</fullName>
        <label>customFieldAccount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__customFieldContact__c</fullName>
        <label>customFieldContact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__customFieldLead__c</fullName>
        <label>customFieldLead</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__customValueForAccount__c</fullName>
        <label>customValueForAccount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__customValueForContact__c</fullName>
        <label>customValueForContact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__customValueForLead__c</fullName>
        <label>customValueForLead</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__isBatchesCompleted__c</fullName>
        <formula>IF( DSCORGPKG__Total_Batches_Completed__c  =  DSCORGPKG__Total_Batches__c  ,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isBatchesCompleted</label>
        <type>Checkbox</type>
    </fields>
    <label>DiscoverOrg Operation</label>
    <nameField>
        <displayFormat>OP-{0000000000}</displayFormat>
        <label>Operation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DiscoverOrg Operations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>